# jamkit-python

./: pyproject.toml
src/jamkit/: sprites.py  turtle.py
src/jamkit/example/: hack_the_robot_example.py
src/jamkit/hack_the_robot/: __init__.py  assets.py  engine.py  loader.py  missions.json  models.py  validators.py
src/jamkit/hack_the_robot/data/: logs_1.txt
src/jamkit/jam_collector/: sprites.py  turtle.py
src/jamkit/jam_collector/tests/: turtle_test.py
tests/: turtle_test.py
