[project]
name = "jamkit"
version = "0.1.0"
description = "Helpers for NI Raspberry Jam workshops"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
